Fix horizontal overflow on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
 body {
   padding-bottom: 40px;
   color: #5a5a5a;
+  overflow-x: hidden;
 }
 
 
